clusters/my-cluster/flux-system/flux-web-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: flux-status-page
  namespace: flux-system
spec:
  hostnames:
    - flux.lab.jake-watson.co.uk
  parentRefs:
    - name: cilium-gateway
      namespace: default
  rules:
    - backendRefs:
        - kind: Service
          name: flux-operator
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
